--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -28,7 +28,23 @@
                 android:layout_gravity="center"
                 android:textSize="30sp"
                 android:textColor="@color/black"
-                android:text="@string/login"/>
+                android:text="@string/register"/>
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                android:layout_marginTop="20dp">
+
+            <androidx.appcompat.widget.AppCompatEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/register_name"
+                android:textColor="@color/black"
+                android:layout_marginTop="20dp"
+                android:hint="@string/name" />
+            </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -38,9 +54,9 @@
                 android:layout_marginTop="20dp">
 
                 <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/email_signin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/register_email"
                     android:textColor="@color/black"
                     android:layout_marginTop="20dp"
                     android:hint="@string/email" />
@@ -51,33 +67,43 @@
                 android:layout_height="wrap_content"
                 app:boxStrokeColor="@color/black"
                 app:hintTextColor="@color/black"
+                app:passwordToggleEnabled="true"
                 android:layout_marginTop="20dp">
 
                 <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/password_signin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/register_password"
                     android:textColor="@color/black"
                     android:layout_marginTop="20dp"
                     android:inputType="textPassword"
                     android:hint="@string/password" />
             </com.google.android.material.textfield.TextInputLayout>
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/login_btn"
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/login"
+                app:boxStrokeColor="@color/black"
+                app:hintTextColor="@color/black"
+                android:layout_marginTop="20dp">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/register_contact"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="20dp"
+                    android:hint="@string/contact_number" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/register"
+                android:id="@+id/register_button"
                 android:textColor="@color/black"
                 android:layout_gravity="center"/>
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_margin="10dp"
-                android:id="@+id/open_register"
-                android:text="@string/register"
-                android:textSize="30sp" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
