--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,9 +6,11 @@
     tools:context=".DetailFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewDetails"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Detail" />
+
+        />
 
 </FrameLayout>
