--- a/app/src/main/res/layout/custom_item_row_chat.xml
+++ b/app/src/main/res/layout/custom_item_row_chat.xml
@@ -9,31 +9,33 @@
         android:id="@+id/message_card_view"
         android:layout_margin="30dp"
         app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:background="@color/blue_light"
-            android:padding="10dp"
+            android:padding="20dp"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/chat_sender"
-                android:text="@string/sender"/>
+                android:text="@string/time"
+                android:id="@+id/time_stamp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:id="@+id/timestamp_chat"
-                android:text="@string/time"/>
+                android:text="@string/sender"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/time_stamp"
+                android:id="@+id/message_sender"/>
+
             <TextView
                 android:id="@+id/message"
                 android:layout_width="match_parent"
-                app:layout_constraintTop_toBottomOf="@id/chat_sender"
+                app:layout_constraintTop_toBottomOf="@id/message_sender"
                 android:layout_marginTop="20dp"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
