--- a/app/src/main/res/layout/custom_item_row_details.xml
+++ b/app/src/main/res/layout/custom_item_row_details.xml
@@ -21,20 +21,24 @@
                 android:id="@+id/name_item"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textIsSelectable="true"
                 android:text="Name"/>
             <TextView
                 android:id="@+id/mobile_item"
                 android:layout_width="wrap_content"
+                android:textIsSelectable="true"
                 android:layout_height="wrap_content"
                 android:text="Mobile"/>
             <TextView
                 android:id="@+id/address_item"
                 android:layout_width="wrap_content"
+                android:textIsSelectable="true"
                 android:layout_height="wrap_content"
                 android:text="Address"/>
             <TextView
                 android:id="@+id/help_item"
                 android:layout_width="wrap_content"
+                android:textIsSelectable="true"
                 android:layout_height="wrap_content"
                 android:text="Help"/>
         </LinearLayout>
