--- a/app/src/main/res/layout/fragment_request.xml
+++ b/app/src/main/res/layout/fragment_request.xml
@@ -95,6 +95,7 @@
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
+               android:id="@+id/request_submit"
                android:layout_marginTop="20dp"
                android:text="Submit"/>
 
