--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
-    tools:context=".DetailFragment">
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent">
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/refresh_detail_button"
+        android:layout_gravity="center"
 
-    <!-- TODO: Update blank fragment layout -->
+        android:src="@drawable/ic_baseline_refresh_24"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewDetails"
         android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/refresh_detail_button"
         android:layout_height="match_parent"
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
+</LinearLayout>
 
-</FrameLayout>
+
+
