--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -27,7 +27,7 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:textSize="30sp"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:text="@string/forgot_password"/>
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -35,13 +35,14 @@
                 android:layout_height="wrap_content"
                 app:boxStrokeColor="@color/black"
                 app:hintTextColor="@color/black"
+                android:textColor="@color/text_color"
                 android:layout_marginTop="20dp">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/email_reset"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
+                    android:textColor="@color/text_color"
                     android:layout_marginTop="20dp"
                     android:hint="@string/email" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -50,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/reset_password"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:layout_gravity="center"/>
 
 
