--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:padding="20dp"
             android:orientation="vertical"
-
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
@@ -27,7 +26,7 @@
                 android:gravity="center"
                 android:layout_gravity="center"
                 android:textSize="30sp"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:text="@string/login"/>
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -35,13 +34,14 @@
                 android:layout_height="wrap_content"
                 app:boxStrokeColor="@color/black"
                 app:hintTextColor="@color/black"
+                android:textColor="@color/text_color"
                 android:layout_marginTop="20dp">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/email_signin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
+                    android:textColor="@color/text_color"
                     android:layout_marginTop="20dp"
                     android:hint="@string/email" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -51,13 +51,14 @@
                 android:layout_height="wrap_content"
                 app:boxStrokeColor="@color/black"
                 app:hintTextColor="@color/black"
+                android:textColor="@color/text_color"
                 android:layout_marginTop="20dp">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/password_signin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
+                    android:textColor="@color/text_color"
                     android:layout_marginTop="20dp"
                     android:inputType="textPassword"
                     android:hint="@string/password" />
@@ -67,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/login"
-                android:textColor="@color/black"
+                android:textColor="@color/text_color"
                 android:layout_gravity="center"/>
 
             <com.google.android.material.textview.MaterialTextView
@@ -76,6 +77,7 @@
                 android:layout_gravity="end"
                 android:layout_margin="10dp"
                 android:id="@+id/open_register"
+                android:textColor="@color/text_color"
                 android:text="@string/register"
                 android:textSize="30sp" />
 
@@ -84,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="25dp"
                 android:layout_gravity="start"
+                android:textColor="@color/text_color"
                 android:layout_margin="10dp"
                 android:text="@string/forgot_password" />
         </LinearLayout>
