--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -28,7 +28,7 @@
        android:hint="@string/message"
        android:padding="10dp"
        android:textAlignment="center"
-       android:textColor="@color/black"
+       android:textColor="@color/text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
