--- a/app/src/main/res/layout/custom_item_row_details.xml
+++ b/app/src/main/res/layout/custom_item_row_details.xml
@@ -16,6 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="@dimen/browser_actions_context_menu_min_padding"
             android:orientation="vertical">
 
             <TextView
